--- a/runtime/app/app.config.yaml
+++ b/runtime/app/app.config.yaml
@@ -18,3 +18,15 @@ application:
             annotations:
               require-adobe-auth: false
               final: true
+          alm-refresh:
+            function: actions/alm-refresh/index.js
+            web: 'yes'
+            runtime: nodejs:22
+            inputs:
+              LOG_LEVEL: info
+              ALM_BASE_URL: https://captivateprime.adobe.com
+              ALM_CLIENT_ID: $ALM_CLIENT_ID
+              ALM_CLIENT_SECRET: $ALM_CLIENT_SECRET
+            annotations:
+              require-adobe-auth: false
+              final: true
